--- a/static/css/style.css
+++ b/static/css/style.css
@@ -29,7 +29,7 @@ h1, h2, h3, p {
 /* Images */
 
 .image-high {
-    max-height: 50vh;
+    max-height: 70vh;
     width: auto;
 }
 
@@ -108,6 +108,8 @@ h1, h2, h3, p {
 
 .sign-heading {
     text-decoration: underline;
+    text-decoration-color:#126a75 ;
+    text-underline-offset: 8px;
     padding-left: 10px;
 }
 
